--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,6 @@ export(sgt)
 export(sgt_default_prior)
 export(skew_t)
 export(skew_t_default_prior)
+export(sym_gt)
+export(sym_gt_default_prior)
 importFrom(brms,custom_family)
